# ros-marker-detection

./: README.md
aruco_detection/: CMakeLists.txt  package.xml
aruco_detection/launch/: AIOdetectionC270.launch  README.txt  cameraParamC270.launch  logitechC920.launch  markerFollowingLaunch.launch  markerFollowingLaunch320.launch
aruco_detection/msg/: ArMarkers.msg
aruco_detection/src/: aruco_detector.cpp  marker_detector.cpp
